# ChessAlgorithmBitboards

./: Board.cpp  Board.h  BoardUI.cpp  BoardUI.h  CMakeLists.txt  ChessEnums.h  MovesGeneration.cpp  MovesGeneration.h  OneMove.cpp  OneMove.h  PieceType.h  main.cpp
communication-files/: cppTOpy_communication.txt
cpp-chess-algorithm/: CMakeLists.txt  ChessEngine.cpp  ChessEngine.h  main.cpp
cpp-chess-algorithm/ChessBoard/: Board.cpp  Board.h  ChessEnums.h  MovesGeneration.h  OneMove.cpp
cpp-chess-algorithm/chess-board/: Board.cpp  Board.h  BoardUI.cpp  BoardUI.h  ChessEnums.h  MovesGeneration.cpp  MovesGeneration.h  OneMove.h
python-chess-GUI/: chess_board.py  main.py  piece_textures.py
python-chess-GUI/pygame-chess-master/: game.py  main.py
